Cleaned up imports, and some small QOL fixes